Fan out incoming calls to independent client devices
